# SokobanSolver

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
levels/: microban_num.soko  microban_num_results.csv
src/: lib.rs  main.rs  node.rs  sokoban.rs  solver.rs
