[package]
name = "sokoban_solver"
version = "0.1.0"
authors = ["Tomas Henriquez (Hassek) <nullwriter@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sokoban"
path = "src/lib.rs"

[[bin]]
name = "sokoban-solver"
path = "src/main.rs"

[dependencies]
debug-here = "0.2.2"
log = "0.4.7"
pretty_env_logger = "0.3.0"
